Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8029102/WarnSerializableLambdaTestc.out
WarnSerializableLambdaTestc.java:18:52: compiler.warn.access.to.member.from.serializable.lambda
- compiler.err.warnings.and.werror
1 error
1 warning
